--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -22,80 +22,427 @@
             <span class="heading-primary--main">Outdoors</span>
             <span class="heading-primary--sub">is where life happens</span>
         </h1>
-        <a href="#" class="btn btn--white btn--animated">Discover our tours</a></div>
+        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+    </div>
 </header>
 
+
+<main>
+    <section class="section-about">
+
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+                Exciting tours for adventurous people
+            </h2>
+        </div>
+
+        <div class="row">
+            <div class="col-1-of-2">
+                <h3 class="heading-tertiary u-margin-bottom-small">
+                    You are going to fall in love with nature
+                </h3>
+                <p class="paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aut commodi, deserunt
+                    doloremque earum est eum illum inventore maxime nemo nulla quas quasi quibusdam reiciendis
+                    repudiandae saepe sint. Nihil?
+                </p>
+                <h3 class="heading-tertiary u-margin-bottom-small">
+                    Live adventure like you have never before
+                </h3>
+                <p class="paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aspernatur debitis ea fuga
+                    ipsa ipsam laborum pariatur quae vel. Asperiores ducimus eaque minima numquam quas? Distinctio dolor
+                    maiores quisquam ratione!
+                </p>
+                <a href="#" class="btn-text">Learn more &rarr;</a>
+            </div>
+            <div class="col-1-of-2">
+                <div class="composition">
+                    <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                    <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                    <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-features">
+
+
+        <div class="row">
+            <div class="col-1-of-4">
+                <div class="feature-box">
+                    <i class="feature-box__icon icon-basic-world"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Explore the World</h3>
+                    <p class="feature-box__text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aut commodi, deserunt.
+                    </p>
+                </div>
+            </div>
+            <div class="col-1-of-4">
+                <div class="feature-box">
+                    <i class="feature-box__icon icon-basic-compass"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Meet Nature</h3>
+                    <p class="feature-box__text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aut commodi, deserunt.
+                    </p>
+                </div>
+            </div>
+            <div class="col-1-of-4">
+                <div class="feature-box">
+                    <i class="feature-box__icon icon-basic-map"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+                    <p class="feature-box__text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aut commodi, deserunt.
+                    </p>
+                </div>
+            </div>
+            <div class="col-1-of-4">
+                <div class="feature-box">
+                    <i class="feature-box__icon icon-basic-heart"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+                    <p class="feature-box__text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aut commodi, deserunt.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary u-margin-bottom-big">
+                Most popular tours
+            </h2>
+        </div>
+
+        <div class="row">
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--1">
+                            &nbsp;
+                        </div>
+                        <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--1">
+                                    The Sea Explorer
+                                </span>
+                        </h4>
+                        <div class="card__details">
+                            <ul>
+                                <li>3 day tours</li>
+                                <li>Upto 30 people</li>
+                                <li>2 tour guides</li>
+                                <li>Sleep in cozy hotels</li>
+                                <li>Difficulty: easy</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-1">
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">Only</p>
+                                <p class="card__price-value">$297</p>
+                            </div>
+                            <a href="#" class="btn btn--white">Book now!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--2">
+                            &nbsp;
+                        </div>
+                        <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--2">
+                                    The forest hiker
+                                </span>
+                        </h4>
+                        <div class="card__details">
+                            <ul>
+                                <li>7 day tour</li>
+                                <li>Upto 40 people</li>
+                                <li>6 tour guides</li>
+                                <li>Sleep in provided tents</li>
+                                <li>Difficulty: medium</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-2">
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">Only</p>
+                                <p class="card__price-value">$297</p>
+                            </div>
+                            <a href="#" class="btn btn--white">Book now!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--3">
+                            &nbsp;
+                        </div>
+                        <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--3">
+                                    The snow adventurer
+                                </span>
+                        </h4>
+                        <div class="card__details">
+                            <ul>
+                                <li>5 day tours</li>
+                                <li>Upto 15 people</li>
+                                <li>3 tour guides</li>
+                                <li>Sleep in provided tents</li>
+                                <li>Difficulty: hard</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-3">
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">Only</p>
+                                <p class="card__price-value">$297</p>
+                            </div>
+                            <a href="#" class="btn btn--white">Book now!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+            <a href="#" class="btn btn--green">Discover all tours</a>
+        </div>
+
+    </section>
+
+    <section class="section-stories">
+        <div class="bg-video">
+            <video class="bg-video__content" autoplay muted loop>
+                <source src="img/video.mp4" type="video/mp5">
+                <source src="img/video.webm" type="video/webm">
+                Your browser is not supported !!!!
+            </video>
+        </div>
+
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+                We make people genuinely happy
+            </h2>
+        </div>
+
+        <div class="row">
+            <div class="story">
+                <figure class="story__shape">
+                    <img class="story__img" src="img/nat-8.jpg" alt="Person on a tour">
+                    <figcaption class="story__caption">
+                        Mary Smith
+                    </figcaption>
+                </figure>
+                <div class="story__text">
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        I had the best week ever with my family
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu accumsan eros, a blandit ante.
+                        Cras eu velit lacinia, venenatis dui eu, efficitur eros. Maecenas egestas vitae sem sagittis
+                        blandit. Sed dignissim metus augue, vel pharetra velit elementum in. Integer et dui nulla.
+                        Pellentesque nec sem tempor massa commodo euismod sit amet eget erat
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="story">
+                <figure class="story__shape">
+                    <img class="story__img" src="img/nat-9.jpg" alt="Person on a tour">
+                    <figcaption class="story__caption">
+                        Jack Wilson
+                    </figcaption>
+                </figure>
+                <div class="story__text">
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        My life is completely different now
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu accumsan eros, a blandit ante.
+                        Cras eu velit lacinia, venenatis dui eu, efficitur eros. Maecenas egestas vitae sem sagittis
+                        blandit. Sed dignissim metus augue, vel pharetra velit elementum in. Integer et dui nulla.
+                        Pellentesque nec sem tempor massa commodo euismod sit amet eget erat
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+            <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
+
+    </section>
+
+    <section class="section-book">
+        <div class="row">
+            <div class="book">
+                <div class="book__form">
+                    <form action="#" class="form">
+                        <div class="u-margin-bottom-medium">
+                            <h2 class="heading-secondary">
+                                Start booking now
+                            </h2>
+                        </div>
+
+                        <div class="form__group">
+                            <input type="text" class="form__input" placeholder="Full Name" id="name" required
+                                   autocomplete="off">
+                            <label for="name" class="form__label">Full Name</label>
+                        </div>
+                        <div class="form__group">
+                            <input type="email" class="form__input" placeholder="Email Address" id="email" required
+                                   autocomplete="off">
+                            <label for="email" class="form__label">Email Address</label>
+                        </div>
+
+                        <div class="form__group u-margin-bottom-medium">
+                            <div class="form__radio-group">
+                                <input type="radio" id="small" class="form__radio-input" name="size">
+                                <label for="small" class="form__radio-label">
+                                    <span class="form__radio-button"></span>
+                                    Small tour group
+                                </label>
+                            </div>
+                            <div class="form__radio-group">
+                                <input type="radio" id="large" class="form__radio-input" name="size">
+                                <label for="large" class="form__radio-label">
+                                    <span class="form__radio-button"></span>
+                                    Large tour group
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form__group">
+                            <button class="btn btn--green">Next step &rarr;</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
+
+<footer class="footer">
+    <div class="footer__logo-box">
+        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+    </div>
+    <div class="row">
+        <div class="col-1-of-2">
+            <div class="footer__navigation">
+                <ul class="footer__list">
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Company</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Contact Us</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Careers</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Privacy</a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link">Terms</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-1-of-2">
+            <div class="footer__copyright">
+                Built by Someone
+                <a href="#" class="footer__link"></a>for his online course
+                <a href="#" class="footer__link">Advanced CSS and SASS</a>.
+                Copyright &copy; by Jonas. Your are 100% allowed to use this webpage for personal and commercial use, but not to claim it as your design. A credit to the original author is of course is highly appreciated!
+            </div>
+        </div>
+    </div>
+</footer>
+</body>
+</html>
+<!--
 <section class="grid-test">
 
-    <!--
-    <div class="row">
-        <div class="col-1-of-2">
-            col 1 of 2
-        </div>
-        <div class="col-1-of-2">
-            col 1 of 2
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="col-1-of-3">
-            col 1 of 3
-        </div>
-        <div class="col-1-of-3">
-            col 1 of 3
-        </div>
-        <div class="col-1-of-3">
-            col 1 of 3
-        </div>
+<div class="row">
+    <div class="col-1-of-2">
+        col 1 of 2
     </div>
+    <div class="col-1-of-2">
+        col 1 of 2
+    </div>
+</div>
 
-    <div class="row">
-        <div class="col-1-of-3">
-            col 1 of 3
-        </div>
-        <div class="col-2-of-3">
-            col 2 of 3
-        </div>
+<div class="row">
+    <div class="col-1-of-3">
+        col 1 of 3
     </div>
+    <div class="col-1-of-3">
+        col 1 of 3
+    </div>
+    <div class="col-1-of-3">
+        col 1 of 3
+    </div>
+</div>
 
-    <div class="row">
-        <div class="col-1-of-4">
-            col 1 of 4
-        </div>
-        <div class="col-1-of-4">
-            col 1 of 4
-        </div>
-        <div class="col-1-of-4">
-            col 1 of 4
-        </div>
-        <div class="col-1-of-4">
-            col 1 of 4
-        </div>
+<div class="row">
+    <div class="col-1-of-3">
+        col 1 of 3
     </div>
+    <div class="col-2-of-3">
+        col 2 of 3
+    </div>
+</div>
 
-    <div class="row">
-        <div class="col-1-of-4">
-            col 1 of 4
-        </div>
-        <div class="col-1-of-4">
-            col 1 of 4
-        </div>
-        <div class="col-2-of-4">
-            col 2 of 4
-        </div>
+<div class="row">
+    <div class="col-1-of-4">
+        col 1 of 4
     </div>
+    <div class="col-1-of-4">
+        col 1 of 4
+    </div>
+    <div class="col-1-of-4">
+        col 1 of 4
+    </div>
+    <div class="col-1-of-4">
+        col 1 of 4
+    </div>
+</div>
 
-    <div class="row">
-        <div class="col-1-of-4">
-            col 1 of 4
-        </div>
-        <div class="col-3-of-4">
-            col 3 of 4
-        </div>
+<div class="row">
+    <div class="col-1-of-4">
+        col 1 of 4
     </div>
-    -->
+    <div class="col-1-of-4">
+        col 1 of 4
+    </div>
+    <div class="col-2-of-4">
+        col 2 of 4
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-1-of-4">
+        col 1 of 4
+    </div>
+    <div class="col-3-of-4">
+        col 3 of 4
+    </div>
+</div>
+
 
 </section>
 
-</body>
-</html>
+-->
