--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -13,6 +13,35 @@
     <title>Natours | Exciting tours for adventurous people</title>
 </head>
 <body>
+
+<div class="navigation">
+
+    <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+    <label for="navi-toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+    </label>
+    <div class="navigation__background">&nbsp;</div>
+    <nav class="navigation__nav">
+        <ul class="navigation__list">
+            <li class="navigation__item">
+                <a href="#" class="navigation__link"><span>01</span>About Natours</a>
+            </li>
+            <li class="navigation__item">
+                <a href="#" class="navigation__link"><span>02</span>Your Benefits</a>
+            </li>
+            <li class="navigation__item">
+                <a href="#" class="navigation__link"><span>03</span>Popular Tours</a>
+            </li>
+            <li class="navigation__item">
+                <a href="#" class="navigation__link"><span>04</span>Stories</a>
+            </li>
+            <li class="navigation__item">
+                <a href="#popup" class="navigation__link"><span>05</span>Book Now</a>
+            </li>
+        </ul>
+    </nav>
+</div>
+
 <header class="header">
     <div class="header__logo-box">
         <img src="./img/logo-white.png" alt="logo" class="header__logo">
@@ -25,7 +54,6 @@
         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
     </div>
 </header>
-
 
 <main>
     <section class="section-about">
@@ -109,7 +137,7 @@
         </div>
     </section>
 
-    <section class="section-tours">
+    <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
             <h2 class="heading-secondary u-margin-bottom-big">
                 Most popular tours
@@ -124,9 +152,9 @@
                             &nbsp;
                         </div>
                         <h4 class="card__heading">
-                                <span class="card__heading-span card__heading-span--1">
-                                    The Sea Explorer
-                                </span>
+                                        <span class="card__heading-span card__heading-span--1">
+                                            The Sea Explorer
+                                        </span>
                         </h4>
                         <div class="card__details">
                             <ul>
@@ -144,7 +172,7 @@
                                 <p class="card__price-only">Only</p>
                                 <p class="card__price-value">$297</p>
                             </div>
-                            <a href="#" class="btn btn--white">Book now!</a>
+                            <a href="#popup" class="btn btn--white">Book now!</a>
                         </div>
                     </div>
                 </div>
@@ -156,9 +184,9 @@
                             &nbsp;
                         </div>
                         <h4 class="card__heading">
-                                <span class="card__heading-span card__heading-span--2">
-                                    The forest hiker
-                                </span>
+                                        <span class="card__heading-span card__heading-span--2">
+                                            The forest hiker
+                                        </span>
                         </h4>
                         <div class="card__details">
                             <ul>
@@ -176,7 +204,7 @@
                                 <p class="card__price-only">Only</p>
                                 <p class="card__price-value">$297</p>
                             </div>
-                            <a href="#" class="btn btn--white">Book now!</a>
+                            <a href="#popup" class="btn btn--white">Book now!</a>
                         </div>
                     </div>
                 </div>
@@ -188,9 +216,9 @@
                             &nbsp;
                         </div>
                         <h4 class="card__heading">
-                                <span class="card__heading-span card__heading-span--3">
-                                    The snow adventurer
-                                </span>
+                                        <span class="card__heading-span card__heading-span--3">
+                                            The snow adventurer
+                                        </span>
                         </h4>
                         <div class="card__details">
                             <ul>
@@ -208,7 +236,7 @@
                                 <p class="card__price-only">Only</p>
                                 <p class="card__price-value">$297</p>
                             </div>
-                            <a href="#" class="btn btn--white">Book now!</a>
+                            <a href="#popup" class="btn btn--white">Book now!</a>
                         </div>
                     </div>
                 </div>
@@ -363,13 +391,35 @@
         <div class="col-1-of-2">
             <div class="footer__copyright">
                 Built by Someone
-                <a href="#" class="footer__link"></a>for his online course
-                <a href="#" class="footer__link">Advanced CSS and SASS</a>.
-                Copyright &copy; by Jonas. Your are 100% allowed to use this webpage for personal and commercial use, but not to claim it as your design. A credit to the original author is of course is highly appreciated!
+                <a href="#" class="footer__link"></a>
+                for his online course
+                <a href="#" class="footer__link">Advanced CSS and SASS</a>
+                .
+                Copyright &copy; by Jonas. Your are 100% allowed to use this webpage for personal and commercial use,
+                but not to claim it as your design. A credit to the original author is of course is highly appreciated!
             </div>
         </div>
     </div>
 </footer>
+
+<div class="popup" id="popup">
+    <div class="popup__content">
+        <div class="popup__left">
+            <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+            <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+        </div>
+        <div class="popup__right">
+            <a href="#section-tours" class="popup__close">&times;</a>
+            <h2 class="heading-secondary u-margin-bottom-medium">Start booking now</h2>
+            <h3 class="heading-tertiary u-margin-bottom-small">Important &dash; Pleas read these terms before booking</h3>
+            <div class="popup__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare lectus sit amet est placerat. Eu ultrices vitae auctor eu augue. Volutpat consequat mauris nunc congue nisi vitae. Nisl pretium fusce id velit ut tortor pretium viverra suspendisse. Ac orci phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Pulvinar proin gravida hendrerit lectus a. Maecenas sed enim ut sem viverra aliquet eget sit. Sed ullamcorper morbi tincidunt ornare massa eget. Vulputate dignissim suspendisse in est ante in nibh. Praesent tristique magna sit amet purus gravida quis blandit turpis. Proin fermentum leo vel orci porta non pulvinar neque. Lectus proin nibh nisl condimentum id venenatis a condimentum. Nec nam aliquam sem et tortor. Eu tincidunt tortor aliquam nulla facilisi cras fermentum odio eu. Nisi quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Nec ultrices dui sapien eget.
+            </div>
+            <a href="" class="btn btn--green">Book Now</a>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
 <!--
